fixed layout bug

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -61,7 +61,7 @@ h3 {
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 165%;
 	float: left;
-	width: 300px;
+	/*width: 300px;*/
 }
 h4 {
 	color: #993;
